--- a/style.css
+++ b/style.css
@@ -1,31 +1,427 @@
 body {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  min-height: 100vh;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+html {
+  font-size: 16px;
 }
 
 .container {
-    height: 100vh;
+  min-height: max(100%, 100vh);
 
-    display: grid;
-    grid-template: 1fr 3fr / 1fr 4fr;
-    grid-template-areas: 
-    "sidebar header"
-    "sidebar main";
+  display: grid;
+  grid-template: auto 3fr / 1fr 4fr;
+  grid-template-areas:
+    'sidebar header'
+    'sidebar main';
 
-    div {
-        border: 1px solid black;
+  #sidebar {
+    grid-area: sidebar;
+  }
+
+  #header {
+    grid-area: header;
+  }
+
+  #main {
+    grid-area: main;
+  }
+}
+
+/* Sidebar */
+#sidebar {
+  background-color: #222;
+  color: #fafafa;
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+
+  img {
+    filter: invert();
+  }
+
+  .items {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    .item {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      padding: 0 1rem;
+      border-radius: 6px;
+      padding: 0.5rem 1rem;
+
+      p {
+        padding: 0;
+        margin: 0;
+      }
+
+      transition: all 50ms;
     }
 
-    #sidebar {
-        grid-area: sidebar;
+    .item:hover,
+    .item:active {
+      cursor: pointer;
+      background-color: #555;
+    }
+  }
+}
+
+#sidebar > .logo {
+  display: flex;
+  gap: 1rem;
+
+  img {
+    width: 2rem;
+    height: auto;
+  }
+
+  h1 {
+    font-size: 2rem;
+    margin: 0;
+  }
+}
+
+/* Header */
+#header {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  position: sticky;
+
+  .nav-1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+
+    #search-bar {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      flex: 1;
+
+      img {
+        width: 1rem;
+      }
+
+      input[type='search'] {
+        border-radius: 10px;
+        background-color: #eeeeee;
+        outline-color: #333;
+        border: none;
+        width: 30%;
+        padding: 6px 1rem;
+        transition: all 300ms;
+      }
+
+      input[type='search']:focus {
+        width: 60%;
+        box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+      }
     }
 
-    #header {
-        grid-area: header;
+    #notification {
+      cursor: pointer;
+      transition: all 150ms;
+      margin-left: auto;
+
+      img {
+        width: 1rem;
+        height: auto;
+      }
     }
 
-    #main {
-        grid-area: main;
+    #notification:hover {
+      transform: scale(1.1);
     }
+
+    #profile {
+      cursor: pointer;
+
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+
+      span {
+        font-weight: bold;
+      }
+
+      span:hover {
+        text-decoration: underline;
+      }
+
+      .image {
+        background-color: #222;
+        color: #fafafa;
+        border-radius: 25px;
+        width: 2rem;
+        height: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-size: 0.8rem;
+      }
+    }
+  }
+
+  .nav-2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
+
+    #profile {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+
+      .image {
+        background-color: #222;
+        color: #fafafa;
+        border-radius: 25px;
+        width: 3rem;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+      }
+
+      .meta {
+        display: flex;
+        flex-direction: column;
+        gap: 0.2rem;
+
+        p {
+          padding: 0;
+          margin: 0;
+          font-size: 0.7rem;
+          font-weight: bold;
+        }
+
+        p.username {
+          font-size: 1rem;
+        }
+      }
+    }
+
+    #actions {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+
+      button {
+        background-color: #444;
+        border: none;
+        color: #fafafa;
+        border-radius: 25px;
+        padding: 0.5rem 1.5rem;
+        cursor: pointer;
+        transition: all 200ms;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+      }
+
+      button:hover {
+        transform: scale(1.1);
+        font-weight: bold;
+      }
+
+      button:active {
+        box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.2);
+        transform: scale(1);
+      }
+    }
+  }
+}
+
+/* Main */
+#main {
+  display: grid;
+  grid-template: auto 1fr / 3fr minmax(200px, 1fr);
+  grid-template-areas:
+    'projects announcements'
+    'projects trending';
+  padding: 1rem;
+  gap: 1rem;
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  .projects {
+    grid-area: projects;
+
+    #projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+      grid-template-rows: repeat(auto-fit, minmax(12rem, 1fr));
+      grid-auto-rows: 12rem;
+      grid-auto-columns: 20rem;
+      gap: 1rem;
+
+      .project {
+        position: relative;
+
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+        border-radius: 8px;
+        padding: 1rem;
+
+        border-left: 8px solid #666;
+        transition: 100ms all;
+
+        &:hover {
+            border-left-color: #444;
+            transform: scale(1.02);
+        }
+
+        h3 {
+          margin: 0;
+          padding: 0;
+          font-size: 1rem;
+          cursor: pointer;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+
+        p {
+          font-size: 0.8rem;
+          color: #444;
+        }
+
+        .actions {
+          display: flex;
+          gap: 0.5rem;
+          position: absolute;
+          right: 0;
+          bottom: 0;
+          padding: 1rem;
+
+          button {
+            background: none;
+            border: none;
+            transition: all 200ms;
+            cursor: pointer;
+
+            &:hover {
+              transform: scale(1.2);
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .announcements {
+    grid-area: announcements;
+
+    #announcements {
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+      padding: 1rem;
+      border-radius: 8px;
+
+      hr {
+        opacity: 0.5;
+      }
+
+      .announcement {
+        h4 {
+          padding: 0;
+          margin: 0;
+          font-size: 0.7rem;
+
+          &:hover {
+            cursor: pointer;
+            text-decoration: underline;
+          }
+        }
+
+        p {
+          width: 200px;
+          padding: 0;
+          margin: 0.4rem 0;
+          font-size: 0.65rem;
+          color: #444;
+
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
+    }
+  }
+
+  .trending {
+    grid-area: trending;
+    height: 100%;
+    position: relative;
+
+    #trending {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+      padding: 1rem;
+      border-radius: 8px;
+
+      .trend {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        cursor: pointer;
+
+        .image {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #222;
+          color: #fafafa;
+          width: 2rem;
+          height: 2rem;
+          font-weight: bold;
+          border-radius: 25px;
+        }
+
+        .meta {
+          p {
+            color: #444;
+            font-size: 0.7rem;
+            padding: 0;
+            margin: 0;
+          }
+
+          p.username {
+            color: #222;
+            font-weight: 500;
+            font-size: 0.8rem;
+            transition: all 150ms;
+
+            &:hover {
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+  }
 }
